8130737: AffineTransformOp can't handle child raster with non-zero x-offset

Reviewed-by: serb, flar